--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -13,10 +14,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.6",
-    "@types/react": "17.0.38",
-    "eslint": "8.6.0",
+    "@types/node": "^17.0.6",
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "typescript": "4.5.4"
   }
 }
