chore: update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bcarter97-showcase",
+  "name": "nextjs-tailwind-ts-starter",
   "private": true,
   "scripts": {
     "dev": "next dev",
